--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,13 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+
+# Jetbrains
+.idea/
+
+# VSCode
+.vscode/
+
+# Protobuf 
+!*.proto
+
